--- a/src/components/OptionsPanel/tempo/tempo-knob.scss
+++ b/src/components/OptionsPanel/tempo/tempo-knob.scss
@@ -55,6 +55,9 @@ div.tempo-option {
     &:hover{
       transform: scale(1.5) translate(0, -1rem);
       transition: all 0.2s ease-in-out;
+      p {
+        visibility: hidden;
+      }
     }
   }
 }
